--- a/bootstrap/project.css
+++ b/bootstrap/project.css
@@ -171,7 +171,7 @@ h3{
 .r7{
     border: solid 1px black;
     height: 500px;
-    width: 500px;
+    width: 628px;
     margin-left: 850px;
     margin-top: 68px;
 
@@ -180,6 +180,53 @@ h3{
     margin-left: 5px;
 }
 #menu{
-    height: 125px;
-    width: 130px;
+    height: 100px;
+    width: 105px;
+    margin-top: 17px;
+    position: absolute;
+    
+    
+}
+.r8{
+    font-family: 'Suranna', serif;
+
+    margin-top: 0px;
+    margin-left: 112px;
+    height: 126px;
+    width: 440px;
+    border: solid 1px black;
+}
+strong{
+    
+    font-size: 12px;
+    font-family: 'Suranna', serif;
+
+}
+b{
+    position: absolute;
+    font-size: 50px;
+    margin-left: 443px;
+    margin-top: -100px;
+    font-family: 'Montez', cursive;
+    color:  #b48c80;;
+}
+.r9{
+    font-family: 'Suranna', serif;
+
+    margin-top: 0px;
+    margin-left: 112px;
+    height: 126px;
+    width: 440px;
+    border: solid 1px black;
+
+}
+.r10{
+    font-family: 'Suranna', serif;
+
+    margin-top: 0px;
+    margin-left: 112px;
+    height: 126px;
+    width: 440px;
+    border: solid 1px black;
+
 }
